# juicebox-sdk

./: .gitignore  .gitmodules  Cargo.toml  JuiceboxSdk.podspec  LICENSE  LoamSdk.podspec  Makefile  README.md  clippy.toml
.github/actions/software-realm/: action.yaml  start.sh  stop.sh
.github/workflows/: android.yaml  audit.yaml  demos.yaml  documentation.yaml  main.yaml  publish.yaml
android/: .gitignore  README.md  build.gradle  jni.sh  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/androidTest/kotlin/me/loam/sdk/: ClientTest.kt
android/src/androidTest/kotlin/xyz/juicebox/sdk/: ClientTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/me/loam/sdk/internal/: Native.java
android/src/main/java/xyz/juicebox/sdk/internal/: Native.java
android/src/main/kotlin/me/loam/sdk/: Client.kt  Configuration.kt  DeleteError.kt  PinHashingMode.kt  Realm.kt  RecoverError.kt  RegisterError.kt
android/src/main/kotlin/xyz/juicebox/sdk/: AuthToken.kt  AuthTokenGenerator.kt  Client.kt  Configuration.kt  DeleteError.kt  PinHashingMode.kt  Realm.kt  RealmId.kt  RecoverError.kt  RegisterError.kt  SecretId.kt  UserId.kt
javascript/: README.md
javascript/demo/: README.md  demo.ts  package-lock.json  package.json  tsconfig.json
javascript/juicebox-sdk/: tsconfig.json
javascript/web-demo/: .babelrc  README.md  package-lock.json  package.json
javascript/web-demo/config/: webpack.config.dev.js  webpack.config.js
javascript/web-demo/src/: app.js  demo.js  index.html
rust/: README.md
rust/api/: Cargo.toml
rust/bridge/common/: Cargo.toml
rust/bridge/common/src/: lib.rs  tokio.rs
rust/bridge/ffi/: Cargo.toml  build.rs  cbindgen.toml
rust/bridge/ffi/src/: array.rs  auth.rs  buffer.rs  http.rs  lib.rs
rust/bridge/jni/: Cargo.toml
rust/bridge/jni/src/: auth.rs  http.rs  lib.rs  types.rs
rust/bridge/wasm/: Cargo.toml  README.md
rust/bridge/wasm/src/: lib.rs
rust/cli/demo/: Cargo.toml
rust/cli/demo/src/: demo.rs
rust/cli/tokens/: Cargo.toml  README.md
rust/cli/tokens/src/: main.rs
rust/marshalling/: Cargo.toml
rust/marshalling/src/: bytes.rs  lib.rs
rust/networking/: Cargo.toml
rust/networking/src/: http.rs  reqwest.rs  rpc.rs
rust/noise/: Cargo.toml  README.md
rust/noise/src/: client.rs  lib.rs  server.rs  test_vectors.rs
rust/oprf/: Cargo.toml  README.md
rust/oprf/benches/: oprf_benchmark.rs
rust/oprf/src/: dleq.rs  lib.rs
rust/process_group/: Cargo.toml
rust/process_group/src/: lib.rs
rust/realm/api/: Cargo.toml
rust/realm/api/src/: lib.rs  requests.rs  signing.rs  types.rs
rust/realm/auth/: Cargo.toml
rust/realm/auth/src/: creation.rs  lib.rs  validation.rs
rust/realm_auth/: Cargo.toml
rust/realm_auth/src/: lib.rs  validation.rs
rust/sdk/: Cargo.toml  README.md
rust/sdk/bridge/: Cargo.toml
rust/sdk/bridge/ffi/: Cargo.toml  build.rs  cbindgen.toml
rust/sdk/bridge/ffi/src/: array.rs  auth.rs  http.rs  lib.rs
rust/sdk/bridge/jni/: Cargo.toml
rust/sdk/bridge/jni/src/: auth.rs  http.rs  lib.rs
rust/sdk/bridge/src/: lib.rs  tokio.rs
rust/sdk/bridge/wasm/: Cargo.toml  README.md
rust/sdk/bridge/wasm/src/: lib.rs
rust/sdk/client/: Cargo.toml
rust/sdk/client/src/: auth.rs  configuration.rs  delete.rs  http.rs  lib.rs  loam.rs  pin.rs  recover.rs  register.rs  request.rs  secret_sharing.rs  sleeper.rs  types.rs
rust/sdk/client/tests/: software_realm.rs
rust/sdk/core/: Cargo.toml
rust/sdk/core/src/: lib.rs  marshalling.rs  oprf.rs  requests.rs  rpc.rs  types.rs
rust/sdk/demo/: Cargo.toml
rust/sdk/demo/src/: demo.rs
rust/sdk/marshalling/: Cargo.toml
rust/sdk/marshalling/src/: bytes.rs  lib.rs
rust/sdk/networking/: Cargo.toml
rust/sdk/networking/src/: http.rs  lib.rs  requests.rs  reqwest.rs  rpc.rs
rust/sdk/noise/: Cargo.toml
rust/sdk/noise/src/: client.rs  lib.rs  server.rs  test_vectors.rs
rust/sdk/noise/src/vectors/: README.md
rust/sdk/oprf/: Cargo.toml  README.md
rust/sdk/oprf/benches/: oprf_benchmark.rs
rust/sdk/oprf/src/: dleq.rs  lib.rs  test_vectors.json
rust/sdk/process_group/: Cargo.toml
rust/sdk/process_group/src/: lib.rs
rust/sdk/realm_auth/: Cargo.toml
rust/sdk/realm_auth/src/: lib.rs  validation.rs
rust/sdk/secret_sharing/: Cargo.toml
rust/sdk/secret_sharing/src/: lib.rs
rust/sdk/software_realm/: Cargo.toml
rust/sdk/software_realm/src/: lib.rs
rust/sdk/src/: auth.rs  client_auth.rs  configuration.rs  delete.rs  lib.rs  pin.rs  recover.rs  register.rs  request.rs  types.rs
rust/sdk/tests/: software_realm.rs
rust/sdk/tokens/: Cargo.toml  README.md
rust/sdk/tokens/src/: main.rs
rust/sdk/util/: Cargo.toml
rust/sdk/util/src/: lib.rs  realm_auth.rs  software_realm.rs
rust/sdk/voprf/: Cargo.toml  README.md
rust/sdk/voprf/benches/: voprf_benchmark.rs
rust/sdk/voprf/src/: dleq.rs  lib.rs  test_vectors.json
rust/secret_sharing/: Cargo.toml  README.md
rust/secret_sharing/src/: lib.rs
rust/software_realm_runner/: Cargo.toml
rust/software_realm_runner/src/: lib.rs
swift/: .swiftlint.yml  Package.swift  README.md  build-ffi.sh  ffi.sh
swift/Sources/JuiceboxSdk/: AuthToken.swift  AuthTokenGenerator.swift  Client.swift  Configuration.swift  Errors.swift  Extensions.swift  Identifable.swift  RealmId.swift  SecretId.swift  UserId.swift
swift/Sources/JuiceboxSdkFfi/: juicebox-sdk-ffi.h  module.modulemap
swift/Sources/LoamSdk/: AuthToken.swift  Client.swift  Configuration.swift  Errors.swift  Extensions.swift
swift/Sources/LoamSdkFfi/: loam-sdk-ffi.h  module.modulemap
swift/Tests/JuiceboxSdkTests/: JuiceboxSdkTests.swift
swift/Tests/LoamSdkTests/: LoamSdkTests.swift
swift/demo/: Package.swift  README.md
swift/demo/Sources/demo/: Demo.swift
whitepaper/: .gitignore  references.bib  template.typ  whitepaper.typ
