[workspace]
members = [
    "rust/sdk/client",
    "rust/sdk/core",
    "rust/sdk/demo",
    "rust/sdk/marshalling",
    "rust/sdk/networking",
    "rust/sdk/noise",
    "rust/sdk/process_group",
    "rust/sdk/realm_auth",
    "rust/sdk/software_realm",
    "rust/sdk/tokens",
    "rust/bridge/ffi",
    "rust/bridge/jni",
    "rust/bridge/wasm",
    "rust/bridge/common",
]
default-members = ["rust/sdk/client"]
resolver = "2"

[workspace.dependencies]
argon2 = "0.5.0"
async-trait = "0.1.64"
base64 = "0.21.0"
blake2 = { version = "0.10.6", default-features = false }
clap = { version = "4.3.0", features = ["derive"] }
console_error_panic_hook = "0.1.6"
chacha20poly1305 = { version = "0.10.1", default-features = false, features = [
    "alloc",
] }
cbindgen = "0.24.3"
ciborium = { version = "0.2.0", default-features = false }
digest = { version = "0.10.6" }
futures = { version = "0.3.25" }
futures-channel = { version = " 0.3.28" }
getrandom = "0.2.8"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hkdf = "0.12.3"
hmac = "0.12.1"
http = "0.2.8"
instant = "0.1.12"
jni = "0.21.1"
jsonwebtoken = { version = "8.3.0", default-features = false }
js-sys = "0.3.61"
libc = "0.2.140"
nix = { version = "0.26.2", default-features = false, features = ["signal"] }
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
rand_core = "0.6.4"
regex = "1.5"
reqwest = { version = "0.11.14", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0.152", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = "1.0.94"
serde-wasm-bindgen = "0.5"
sharks = "0.5.0"
subtle = { version = "2.4.1", default-features = false }
thiserror = "1.0.40"
tokio = { version = "1.25.0", features = ["sync", "time"] }
tracing = { version = "0.2.0", default-features = false, features = [
    "alloc",
    "attributes",
] }
# The latest Cargo.toml of tracing-opentelemetry in Git has an old version number.
tracing-opentelemetry = { version = "*" }
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4"] }
voprf = { version = "0.5.0-pre.4" }
wasm-bindgen = { version = "0.2.84", features = ["serde"] }
wasm-bindgen-futures = "0.4.34"
wasm-bindgen-test = "0.3.34"
web-sys = { version = "0.3.4", features = [
    "Blob",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
] }
x25519-dalek = { version = "2.0.0-rc.2", features = [
    "reusable_secrets",
    "serde",
    "static_secrets",
] }
zeroize = "1.6.0"

[patch.crates-io]
# We need https://github.com/tokio-rs/tracing/pull/2335 to quiet down error return
# values in tokio::instrument, which is not yet unreleased.
tracing = { git = "https://github.com/tokio-rs/tracing" }
tracing-opentelemetry = { git = "https://github.com/tokio-rs/tracing" }
