[workspace]
members = [
    "rust/api",
    "rust/cli/demo",
    "rust/cli/tokens",
    "rust/marshalling",
    "rust/networking",
    "rust/noise",
    "rust/oprf",
    "rust/process_group",
    "rust/realm_auth",
    "rust/sdk",
    "rust/sdk/bridge",
    "rust/sdk/bridge/ffi",
    "rust/sdk/bridge/jni",
    "rust/sdk/bridge/wasm",
    "rust/secret_sharing",
    "rust/software_realm_runner",
]
default-members = ["rust/sdk"]
resolver = "2"

[workspace.package]
version = "0.1.1"
license = "MIT"
authors = [
    "Simon Fell <simon@juicebox.me>",
    "Diego Ongaro <diego@juicebox.me>",
    "Nora Trapp <nora@juicebox.me>",
]

[workspace.dependencies]
juicebox_api = { path = "rust/api", version = "0.1.1" }
juicebox_marshalling = { path = "rust/marshalling", version = "0.1.1" }
juicebox_networking = { path = "rust/networking", version = "0.1.1" }
juicebox_noise = { path = "rust/noise", version = "0.1.1" }
juicebox_oprf = { path = "rust/oprf", version = "0.1.1" }
juicebox_process_group = { path = "rust/process_group", version = "0.1.1" }
juicebox_realm_auth = { path = "rust/realm_auth", version = "0.1.1" }
juicebox_secret_sharing = { path = "rust/secret_sharing", version = "0.1.1" }
juicebox_sdk = { path = "rust/sdk", version = "0.1.1" }
juicebox_sdk_bridge = { path = "rust/sdk/bridge", version = "0.1.1" }
juicebox_sdk_ffi = { path = "rust/sdk/bridge/ffi", version = "0.1.1" }
juicebox_sdk_jni = { path = "rust/sdk/bridge/jni", version = "0.1.1" }
juicebox_sdk_wasm = { path = "rust/sdk/bridge/wasm", version = "0.1.1" }
juicebox_software_realm_runner = { path = "rust/software_realm_runner", version = "0.1.1" }

argon2 = "0.5.0"
async-trait = "0.1.64"
base64 = "0.21.0"
blake2 = { version = "0.10.6", default-features = false }
clap = { version = "4.3.0", features = ["derive"] }
console_error_panic_hook = "0.1.6"
chacha20poly1305 = { version = "0.10.1", default-features = false, features = [
    "alloc",
] }
cbindgen = "0.24.3"
ciborium = { version = "0.2.0", default-features = false }
criterion = "0.5.1"
curve25519-dalek = { version = "4.0.0-rc.3", features = [
    "digest",
    "rand_core",
] }
digest = { version = "0.10.6" }
ed25519-dalek = { version = "2.0.0-rc.3", default-features = false, features = [
    "rand_core",
] }
elliptic-curve = { version = "0.13.5", features = ["hash2curve"] }
futures = { version = "0.3.25" }
futures-channel = { version = " 0.3.28" }
getrandom = "0.2.8"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hkdf = "0.12.3"
hmac = "0.12.1"
http = "0.2.8"
instant = "0.1.12"
itertools = { version = "0.11.0", default-features = false, features = [
    "use_alloc",
] }
jni = "0.21.1"
jsonwebtoken = { version = "8.3.0", default-features = false }
js-sys = "0.3.61"
libc = "0.2.140"
nix = { version = "0.26.2", default-features = false, features = ["signal"] }
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
rand_core = "0.6.4"
rand_chacha = { version = "0.3.1", default-features = false }
regex = "1.5"
reqwest = { version = "0.11.14", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0.152", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = "1.0.94"
serde-wasm-bindgen = "0.5"
subtle = { version = "2.4.1", default-features = false }
sha2 = { version = "0.10.7", default-features = false }
thiserror = "1.0.40"
tokio = { version = "1.25.0", features = ["sync", "time"] }
tracing = { version = "0.2.0", default-features = false, features = [
    "alloc",
    "attributes",
] }
# The latest Cargo.toml of tracing-opentelemetry in Git has an old version number.
tracing-opentelemetry = { version = "*" }
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4"] }
wasm-bindgen = { version = "0.2.87", features = ["serde"] }
wasm-bindgen-futures = "0.4.34"
wasm-bindgen-test = "0.3.34"
web-sys = { version = "0.3.4", features = [
    "Blob",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
] }
x25519-dalek = { version = "2.0.0-rc.3", features = [
    "reusable_secrets",
    "serde",
    "static_secrets",
] }
zeroize = { version = "1.6.0", features = ["derive"] }

[patch.crates-io]
# We need https://github.com/tokio-rs/tracing/pull/2335 to quiet down error return
# values in tokio::instrument, which is not yet unreleased.
tracing = { git = "https://github.com/tokio-rs/tracing" }
tracing-opentelemetry = { git = "https://github.com/tokio-rs/tracing" }
