[workspace]
members = [
    "rust/cli/demo",
    "rust/cli/tokens",
    "rust/marshalling",
    "rust/networking",
    "rust/noise",
    "rust/oprf",
    "rust/process_group",
    "rust/realm/api",
    "rust/realm/auth",
    "rust/sdk",
    "rust/sdk/bridge",
    "rust/sdk/bridge/ffi",
    "rust/sdk/bridge/jni",
    "rust/sdk/bridge/wasm",
    "rust/secret_sharing",
    "rust/software_realm_runner",
]
default-members = ["rust/sdk"]
resolver = "2"

[workspace.package]
version = "0.2.2"
license = "MIT"
authors = [
    "Simon Fell <simon@juicebox.me>",
    "Diego Ongaro <diego@juicebox.me>",
    "Nora Trapp <nora@juicebox.me>",
]
rust-version = "1.75"

[workspace.dependencies]
juicebox_marshalling = { path = "rust/marshalling", version = "0.2.2" }
juicebox_networking = { path = "rust/networking", version = "0.2.2" }
juicebox_noise = { path = "rust/noise", version = "0.2.2" }
juicebox_oprf = { path = "rust/oprf", version = "0.2.2" }
juicebox_process_group = { path = "rust/process_group", version = "0.2.2" }
juicebox_realm_api = { path = "rust/realm/api", version = "0.2.2" }
juicebox_realm_auth = { path = "rust/realm/auth", version = "0.2.2" }
juicebox_secret_sharing = { path = "rust/secret_sharing", version = "0.2.2" }
juicebox_sdk = { path = "rust/sdk", version = "0.2.2" }
juicebox_sdk_bridge = { path = "rust/sdk/bridge", version = "0.2.2" }
juicebox_sdk_ffi = { path = "rust/sdk/bridge/ffi", version = "0.2.2" }
juicebox_sdk_jni = { path = "rust/sdk/bridge/jni", version = "0.2.2" }
juicebox_sdk_wasm = { path = "rust/sdk/bridge/wasm", version = "0.2.2" }
juicebox_software_realm_runner = { path = "rust/software_realm_runner", version = "0.2.2" }

argon2 = { version = "0.5.2", default-features = false, features = [
    "alloc",
    "zeroize",
] }
async-trait = "0.1.77"
blake2 = { version = "0.10.6", default-features = false }
clap = { version = "4.4.14", features = ["derive"] }
console_error_panic_hook = "0.1.7"
chacha20poly1305 = { version = "0.10.1", default-features = false, features = [
    "alloc",
] }
cbindgen = "0.26.0"
# Diego audited ciborium 0.2.1 in Aug 2023.
ciborium = { version = "=0.2.1", default-features = false }
criterion = "0.5.1"
curve25519-dalek = { version = "4.1", features = ["digest", "rand_core"] }
digest = { version = "0.10.7" }
ed25519-dalek = { version = "2.1", default-features = false, features = [
    "rand_core",
] }
futures = { version = "0.3.30" }
futures-channel = { version = "0.3.30" }
getrandom = "0.2.11"
# Google and Mozilla audited hex 0.4.3 (`cargo vet`).
hex = { version = "=0.4.3", default-features = false, features = ["alloc"] }
hkdf = "0.12.4"
hmac = "0.12.1"
http = "0.2.11"
# Simon audited instant 0.1.12 in Aug 2023.
instant = "=0.1.12"
itertools = { version = "0.12.0", default-features = false, features = [
    "use_alloc",
] }
jni = "0.21.1"
# Nora audited jwt-simple 0.11.7 in Oct 2023.
jwt-simple = "=0.11.7"
js-sys = "0.3.66"
libc = "0.2.152"
nix = { version = "0.27.1", default-features = false, features = ["signal"] }
opentelemetry = "0.21.0"
rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
rand_core = "0.6.4"
rand_chacha = { version = "0.3.1", default-features = false }
regex = "1.10"
reqwest = { version = "0.11.23", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0.195", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = "1.0.111"
serde-wasm-bindgen = "0.6"
subtle = { version = "2.5.0", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["sync", "time"] }
tracing = { version = "0.1.40", default-features = false, features = [
    "attributes",
] }
tracing-opentelemetry = "0.22.0"
url = { version = "2.5.0", features = ["serde"] }
wasm-bindgen = { version = "0.2.89", features = ["serde"] }
wasm-bindgen-futures = "0.4.39"
wasm-bindgen-test = "0.3.39"
web-sys = { version = "0.3.66", features = [
    "Blob",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
] }
x25519-dalek = { version = "2.0", features = [
    "reusable_secrets",
    "serde",
    "static_secrets",
] }
zeroize = { version = "1.7.0", features = ["derive"] }
