[package]
name = "juicebox_oprf"
version.workspace = true
license.workspace = true
authors.workspace = true
edition = "2021"

[dependencies]
curve25519-dalek = { workspace = true }
digest = { workspace = true }
juicebox_marshalling = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
hex = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }
rand_chacha = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "oprf_benchmark"
harness = false
