[package]
name = "juicebox_realm_auth"
version.workspace = true
license.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { workspace = true }
jsonwebtoken = { workspace = true }
juicebox_api = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
