[package]
name = "juicebox_secret_sharing"
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
edition = "2021"

[dependencies]
curve25519-dalek = { workspace = true }
itertools = { workspace = true }
rand_core = { workspace = true }

[dev-dependencies]
rand = { workspace = true, features = ["getrandom"] }
