[package]
name = "juicebox_software_realm_runner"
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
edition = "2021"

[dependencies]
hex = { workspace = true }
juicebox_process_group = { workspace = true }
juicebox_realm_api = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
