[package]
name = "juicebox-sdk-bridge"
version.workspace = true
license.workspace = true
authors = ["Nora Trapp <nora@juicebox.me>"]
edition = "2021"

[dependencies]
async-trait = { workspace = true }
juicebox-sdk = { workspace = true }
tokio = { workspace = true, optional = true }
url = { workspace = true }
uuid = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }

[features]
"tokio" = ["tokio/rt-multi-thread", "juicebox-sdk/tokio"]
"wasm" = ["wasm-bindgen"]
