[package]
name = "juicebox-sdk-ffi"
version = "0.1.0"
authors = ["Nora Trapp <nora@juicebox.me>", "Diego Ongaro <diego@juicebox.me>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
juicebox-sdk = { path = "../../sdk/client" }
juicebox-sdk-bridge = { path = "../common", features = ["tokio"] }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
cbindgen = { workspace = true }
