[package]
name = "juicebox-sdk-ffi"
version.workspace = true
license.workspace = true
authors = ["Nora Trapp <nora@juicebox.me>", "Diego Ongaro <diego@juicebox.me>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
juicebox-sdk = { workspace = true }
juicebox-sdk-bridge = { workspace = true, features = ["tokio"] }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
cbindgen = { workspace = true }
