[package]
name = "juicebox-sdk-jni"
version = "0.1.0"
authors = ["Nora Trapp <nora@juicebox.me>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
jni = { workspace = true }
juicebox-sdk = { path = "../../sdk/client" }
juicebox-sdk-bridge = { path = "../common", features = ["tokio"] }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
cbindgen = { workspace = true }
