[package]
name = "juicebox-sdk-jni"
version.workspace = true
license.workspace = true
authors = ["Nora Trapp <nora@juicebox.me>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
jni = { workspace = true }
juicebox-sdk = { workspace = true }
juicebox-sdk-bridge = { workspace = true, features = ["tokio"] }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
cbindgen = { workspace = true }
