[package]
name = "juicebox-sdk-wasm"
version.workspace = true
license.workspace = true
authors = ["Nora Trapp <nora@juicebox.me>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = { workspace = true }
console_error_panic_hook = { workspace = true }
futures-channel = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
instant = { workspace = true, features = ["wasm-bindgen"] }
js-sys = { workspace = true }
juicebox-sdk = { workspace = true }
juicebox-sdk-bridge = { workspace = true, features = ["wasm"] }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
url = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
