[package]
name = "juicebox_demo_cli"
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
edition = "2021"

[[bin]]
name = "demo"
path = "src/demo.rs"

[dependencies]
clap = { workspace = true }
hex = { workspace = true }
juicebox_sdk = { workspace = true, features = ["reqwest", "tokio"] }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
