[package]
name = "juicebox_realm_auth"
version.workspace = true
license.workspace = true
rust-version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, optional = true}
hex = { workspace = true }
jwt-simple = { workspace = true }
juicebox_realm_api = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
clap = ["dep:clap"]
