[package]
name = "juicebox_sdk_bridge"
version.workspace = true
license.workspace = true
authors.workspace = true
edition = "2021"

[dependencies]
async-trait = { workspace = true }
juicebox_sdk = { workspace = true }
tokio = { workspace = true, optional = true }
url = { workspace = true }
uuid = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }

[features]
"tokio" = ["tokio/rt-multi-thread", "juicebox_sdk/tokio"]
"wasm" = ["wasm-bindgen"]
