[package]
name = "juicebox_sdk_bridge"
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
edition = "2021"

[dependencies]
juicebox_sdk = { workspace = true, features = ["client_auth"] }
tokio = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[features]
"tokio" = ["tokio/rt-multi-thread", "juicebox_sdk/tokio"]
"wasm" = ["wasm-bindgen"]
