[package]
name = "juicebox-sdk"
version = "0.1.0"
authors = [
    "Simon Fell <simon@juicebox.me>",
    "Diego Ongaro <diego@juicebox.me>",
    "Nora Trapp <nora@juicebox.me>",
]
edition = "2021"

[lib]
doctest = false

[dependencies]
argon2 = { workspace = true }
async-trait = { workspace = true }
blake2 = { workspace = true }
chacha20poly1305 = { workspace = true }
digest = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
instant = { workspace = true }
juicebox-sdk-core = { path = "../core" }
juicebox-sdk-marshalling = { path = "../marshalling" }
juicebox-sdk-networking = { path = "../networking" }
juicebox-sdk-noise = { path = "../noise" }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sharks = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
voprf = { workspace = true }
x25519-dalek = { workspace = true }
zeroize = { workspace = true }

[features]
tokio = []
