[package]
name = "juicebox-sdk"
version = "0.1.0"
authors = [
    "Simon Fell <simon@juicebox.me>",
    "Diego Ongaro <diego@juicebox.me>",
    "Nora Trapp <nora@juicebox.me>",
]
edition = "2021"

[lib]
doctest = false

[dependencies]
argon2 = { workspace = true }
async-trait = { workspace = true }
blake2 = { workspace = true }
chacha20poly1305 = { workspace = true }
curve25519-dalek = { workspace = true }
digest = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
instant = { workspace = true }
juicebox-sdk-core = { path = "../core" }
juicebox-sdk-marshalling = { path = "../marshalling" }
juicebox-sdk-networking = { path = "../networking" }
juicebox-sdk-noise = { path = "../noise" }
juicebox-sdk-secret-sharing = { path = "../secret_sharing" }
rand = { workspace = true, features = ["getrandom"] }
serde = { workspace = true }
serde_json = { workspace = true }
subtle = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
voprf = { workspace = true }
x25519-dalek = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
juicebox-sdk-process-group = { path = "../process_group" }
juicebox-sdk-realm-auth = { path = "../realm_auth" }
juicebox-sdk-software-realm = { path = "../software_realm" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
tokio = []
reqwest = ["juicebox-sdk-networking/reqwest"]
software_realm_tests = ["tokio", "reqwest", "tokio/macros", "tokio/rt-multi-thread"]
