[package]
name = "juicebox-sdk"
version.workspace = true
license.workspace = true
authors = [
    "Simon Fell <simon@juicebox.me>",
    "Diego Ongaro <diego@juicebox.me>",
    "Nora Trapp <nora@juicebox.me>",
]
edition = "2021"

[lib]
doctest = false

[dependencies]
argon2 = { workspace = true }
async-trait = { workspace = true }
blake2 = { workspace = true }
chacha20poly1305 = { workspace = true }
curve25519-dalek = { workspace = true }
digest = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
instant = { workspace = true }
juicebox-sdk-core = { workspace = true }
juicebox-sdk-marshalling = { workspace = true }
juicebox-sdk-networking = { workspace = true }
juicebox-sdk-noise = { workspace = true }
juicebox-sdk-oprf = { workspace = true }
juicebox-sdk-secret-sharing = { workspace = true }
rand = { workspace = true, features = ["getrandom"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
x25519-dalek = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
juicebox-sdk-process-group = { workspace = true }
juicebox-sdk-realm-auth = { workspace = true }
juicebox-sdk-software-realm = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
tokio = []
reqwest = ["juicebox-sdk-networking/reqwest"]
software_realm_tests = [
    "tokio",
    "reqwest",
    "tokio/macros",
    "tokio/rt-multi-thread",
]
