[package]
name = "juicebox-sdk-core"
version = "0.1.0"
authors = [
    "Simon Fell <simon@juicebox.me>",
    "Diego Ongaro <diego@juicebox.me>",
    "Nora Trapp <nora@juicebox.me>",
]
edition = "2021"

[dependencies]
digest = { workspace = true }
hex = { workspace = true }
juicebox-sdk-marshalling = { path = "../marshalling" }
juicebox-sdk-noise = { path = "../noise" }
rand_core = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
subtle = { workspace = true }
voprf = { workspace = true }
