[package]
name = "juicebox-sdk-core"
version = "0.1.0"
authors = [
    "Simon Fell <simon@juicebox.me>",
    "Diego Ongaro <diego@juicebox.me>",
    "Nora Trapp <nora@juicebox.me>",
]
edition = "2021"

[dependencies]
blake2 = { workspace = true }
curve25519-dalek = { workspace = true }
digest = { workspace = true }
hex = { workspace = true }
juicebox-sdk-marshalling = { path = "../marshalling" }
juicebox-sdk-noise = { path = "../noise" }
rand_core = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
