[package]
name = "juicebox-sdk-core"
version.workspace = true
license.workspace = true
authors = [
    "Simon Fell <simon@juicebox.me>",
    "Diego Ongaro <diego@juicebox.me>",
    "Nora Trapp <nora@juicebox.me>",
]
edition = "2021"

[dependencies]
blake2 = { workspace = true }
curve25519-dalek = { workspace = true }
digest = { workspace = true }
ed25519-dalek = { workspace = true }
elliptic-curve = { workspace = true }
hex = { workspace = true }
juicebox-sdk-marshalling = { workspace = true }
juicebox-sdk-noise = { workspace = true }
juicebox-sdk-voprf = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
rand_core = { workspace = true, features = ["getrandom"] }
