[package]
name = "juicebox-sdk-demo"
version.workspace = true
license.workspace = true
edition = "2021"

[[bin]]
name = "juicebox_sdk_demo"
path = "src/demo.rs"

[dependencies]
clap = { workspace = true }
hex = { workspace = true }
juicebox-sdk = { workspace = true, features = ["reqwest", "tokio"] }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
