[package]
name = "juicebox-sdk-marshalling"
version.workspace = true
license.workspace = true
authors = [
    "Simon Fell <simon@juicebox.me>",
    "Diego Ongaro <diego@juicebox.me>",
    "Nora Trapp <nora@juicebox.me>",
]
edition = "2021"

[dependencies]
ciborium = { workspace = true }
curve25519-dalek = { workspace = true }
serde = { workspace = true }
