[package]
name = "loam-sdk-networking"
version = "0.1.0"
authors = [
    "Simon Fell <simon@loam.me>",
    "Diego Ongaro <diego@loam.me>",
    "Nora Trapp <nora@loam.me>",
]
edition = "2021"

[dependencies]
async-trait = { workspace = true }
http = { workspace = true }
loam-sdk-core = { path = "../../sdk/core" }
opentelemetry = { workspace = true, optional = true }
serde = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
url = { workspace = true }

[features]
"header-tracing" = ["tracing", "tracing-opentelemetry", "opentelemetry"]
"threadsafe-futures" = []
