[package]
name = "juicebox-sdk-networking"
version = "0.1.0"
authors = [
    "Simon Fell <simon@juicebox.me>",
    "Diego Ongaro <diego@juicebox.me>",
    "Nora Trapp <nora@juicebox.me>",
]
edition = "2021"

[dependencies]
async-trait = { workspace = true }
http = { workspace = true }
juicebox-sdk-core = { path = "../core" }
juicebox-sdk-marshalling = { path = "../marshalling" }
opentelemetry = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true, optional = true }
url = { workspace = true }

[features]
"distributed-tracing" = ["tracing-opentelemetry", "opentelemetry"]
"threadsafe-futures" = []
"reqwest" = ["dep:reqwest", "threadsafe-futures"]
