[package]
name = "juicebox-sdk-networking"
version.workspace = true
license.workspace = true
authors = [
    "Simon Fell <simon@juicebox.me>",
    "Diego Ongaro <diego@juicebox.me>",
    "Nora Trapp <nora@juicebox.me>",
]
edition = "2021"

[dependencies]
async-trait = { workspace = true }
http = { workspace = true }
juicebox-sdk-core = { workspace = true }
juicebox-sdk-marshalling = { workspace = true }
opentelemetry = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true, optional = true }
url = { workspace = true }

[features]
"distributed-tracing" = ["tracing-opentelemetry", "opentelemetry"]
"reqwest" = ["dep:reqwest"]
