[package]
name = "juicebox-sdk-noise"
version.workspace = true
license.workspace = true
authors = ["Diego Ongaro <diego@juicebox.me>"]
edition = "2021"

[dependencies]
blake2 = { workspace = true }
chacha20poly1305 = { workspace = true }
digest = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
juicebox-sdk-marshalling = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
x25519-dalek = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
serde_json = { workspace = true }
