[package]
name = "juicebox-sdk-realm-auth"
version.workspace = true
license.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { workspace = true }
jsonwebtoken = { workspace = true }
juicebox-sdk-core = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
