[package]
name = "juicebox-sdk-secret-sharing"
version.workspace = true
license.workspace = true
authors = ["Nora Trapp <nora@juicebox.me>"]
edition = "2021"

[dependencies]
curve25519-dalek = { workspace = true }
itertools = { workspace = true }
juicebox-sdk-core = { workspace = true }
rand_core = { workspace = true }

[dev-dependencies]
rand = { workspace = true, features = ["getrandom"] }
