[package]
name = "juicebox-sdk-software-realm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { workspace = true }
juicebox-sdk-core = { path = "../core" }
juicebox-sdk-process-group = { path = "../process_group" }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
